--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
   </head>
   <body>
     <header class="header">
-      <img src="logo.png" height="68" width="68" alt="Today I learned logo" />
-      <h1>Today I learned</h1>
+      <div class="logo">
+        <img src="logo.png" height="68" width="68" alt="Today I learned logo" />
+        <h1>Today I learned</h1>
+      </div>
       <button>Share a fact</button>
     </header>
 
@@ -55,8 +57,10 @@
             <p>
               React is being developed by Meta (formerly facebook)
               <a href="https://opensource.fb.com/" target="_blank">{Source}</a>
-              <span class="tag">#technology#</span>
             </p>
+            <span class="tag" style="background-color: #3b82f6"
+              >#technology#</span
+            >
             <div>
               <button>👍 <strong>24</strong></button>
               <button>🤯 <strong>9</strong></button>
@@ -73,8 +77,8 @@
                 target="_blank"
                 >{Source}</a
               >
-              <span class="tag">#society#</span>
             </p>
+            <span class="tag" style="background-color: #eab308">#society#</span>
             <div>
               <button>👍 <strong>11</strong></button>
               <button>🤯 <strong>2</strong></button>
