--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="logo.png" height="68" width="68" alt="Today I learned logo" />
         <h1>Today I learned</h1>
       </div>
-      <button>Share a fact</button>
+      <button class="btn btn-large">Share a fact</button>
     </header>
 
     <form class="fact-form">
@@ -35,20 +35,20 @@
         <option value="science">Science</option>
         <option value="finance">Finance</option>
       </select>
-      <button>Post</button>
+      <button class="btn btn-large">Post</button>
     </form>
 
     <main class="main">
       <aside>
         <ul>
           <li>
-            <button>All</button>
+            <button class="btn">All</button>
           </li>
           <li>
-            <button>Technology</button>
+            <button class="btn">Technology</button>
           </li>
           <li>
-            <button>Science</button>
+            <button class="btn">Science</button>
           </li>
         </ul>
       </aside>
