--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
     <main class="main">
       <aside>
         <ul>
-          <li>
-            <button class="btn">All</button>
+          <li class="category">
+            <button class="btn btn-all-categories">All</button>
           </li>
-          <li>
-            <button class="btn">Technology</button>
+          <li class="category">
+            <button class="btn btn-category" style="background-color: #3b82f6">Technology</button>
           </li>
-          <li>
-            <button class="btn">Science</button>
+          <li class="category">
+            <button class="btn btn-category" style="background-color: #16a34a">Science</button>
           </li>
         </ul>
       </aside>
