--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Coiny&family=Inter:wght@400;500;700&family=Sono:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Coiny&family=Inter:wght@400;600;&family=Sono:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
     <link href="style.css" rel="stylesheet" />
@@ -60,12 +60,12 @@
               <a class="source" href="https://opensource.fb.com/" target="_blank">{Source}</a>
             </p>
             <span class="tag" style="background-color: #3b82f6"
-              >#technology#</span
+              >technology</span
             >
             <div class="vote-buttons">
-              <button>👍 <strong>24</strong></button>
-              <button>🤯 <strong>9</strong></button>
-              <button>⛔️ <strong>4</strong></button>
+              <button>👍 24</button>
+              <button>🤯 9</button>
+              <button>⛔️ 4</button>
             </div>
           </li>
           <ul>
@@ -79,12 +79,12 @@
                 >{Source}</a
               >
               <span class="tag" style="background-color: #eab308"
-                >#society#</span
+                >society</span
               >
               <div class="vote-buttons">
-                <button>👍 <strong>11</strong></button>
-                <button>🤯 <strong>2</strong></button>
-                <button>⛔️ <strong>0</strong></button>
+                <button>👍 11</button>
+                <button>🤯 2</button>
+                <button>⛔️ 0</button>
               </div>
             </li>
           </ul>
