--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Coiny&family=Inter:wght@400;600;&family=Sono:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Coiny&family=Inter:wght@400;600&family=Sono:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
     <link href="style.css" rel="stylesheet" />
@@ -22,10 +22,10 @@
         <img src="logo.png" height="68" width="68" alt="Today I learned logo" />
         <h1>Today I learned</h1>
       </div>
-      <button class="btn btn-large">Share a fact</button>
+      <button class="btn btn-large btn-open">Share a fact</button>
     </header>
 
-    <form class="fact-form">
+    <form class="fact-form hidden">
       <input type="text" placeholder="Share a fact with the world" />
       <span>200</span>
       <input type="text" placeholder="Trustworthy source" />
@@ -92,5 +92,6 @@
       </section>
     </main>
   </div>
+  <script src="script.js"></script>
   </body>
 </html>
